[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/assets/fonts/hf-free-complete/matchup-pro-v1.1/MatchupPro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gameplay/MENU/scripts/initial.gd" type="Script" id=3]
[ext_resource path="res://gameplay/MENU/buttonBase/buttonMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/MENU/title.pxo" type="Texture" id=5]

[sub_resource type="DynamicFont" id=8]
size = 64
outline_size = 2
outline_color = Color( 0.341176, 0.180392, 0.345098, 1 )
extra_spacing_char = 4
font_data = ExtResource( 2 )

[node name="initial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 680.5, 368 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.223
anchor_top = 0.152
anchor_right = 0.764
anchor_bottom = 0.391
margin_left = 0.496979
margin_top = 0.127991
margin_right = 0.195923
margin_bottom = 0.223969
rect_pivot_offset = Vector2( 368, 0 )
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.376194
anchor_top = 0.5
anchor_right = 0.61058
anchor_bottom = 0.722826

[node name="start" parent="VBoxContainer" instance=ExtResource( 4 )]
custom_fonts/font = SubResource( 8 )
text = "mn_start"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 76.0
margin_right = 319.0
margin_bottom = 88.0
custom_constants/separation = 12

[node name="options" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 92.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 8 )
text = "mn_opt"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 168.0
margin_right = 319.0
margin_bottom = 180.0
custom_constants/separation = 12

[node name="credits" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 184.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 8 )
text = "mn_cre"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
